# slate

./: .gitignore  DEVLOG.md  README.md  index.html  package-lock.json  package.json
docs/: DEVELOPMENT_LOG.md  SLATE_MVP_PLAN.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  test_menu.rs  tests.rs
src-tauri/src/db/: init.rs  mod.rs
src-tauri/src/services/: attachment_service.rs  backup_service.rs  csv_service.rs  external_db_service.rs  field_option_service.rs  filter_service.rs  folder_service.rs  link_service.rs  metadata_service.rs  mod.rs  note_service.rs  record_service.rs  schema_service.rs  search_service.rs  table_service.rs  view_service.rs
src/components/common/: AddColumnModal.tsx  CommandPalette.tsx  CreateTableModal.tsx  EmptyState.tsx  Modal.tsx  SearchInput.tsx  SettingsModal.tsx
src/components/layout/: AppLayout.tsx  FolderListItem.tsx  Sidebar.tsx  TableList.tsx  TableListItem.tsx  TopBar.tsx
src/components/record/: ExpandedRecordModal.tsx  FieldEditor.tsx  RecordDetailPanel.tsx  RecordDetailWindow.tsx  SelectFieldEditor.tsx
src/components/table/: FilterBar.tsx  MainTableView.tsx  TableCell.tsx  TableGrid.tsx  TableHeaderCell.tsx  TableToolbar.tsx  TagsCell.tsx
src/components/views/: AddViewModal.tsx  CalendarView.tsx  FormView.tsx  GalleryView.tsx  KanbanView.tsx  ViewTabsBar.tsx
src/lib/: format.ts  tauri.ts  theme.ts
src/store/: workspaceStore.ts
src/types/: slate.ts
